--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,12 +11,15 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Assignment_PH38936"
-        android:networkSecurityConfig="@xml/network_security_config"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".car_detail"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -25,14 +28,12 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!-- Khai báo CarFormActivity -->
+        </activity> <!-- Khai báo CarFormActivity -->
         <activity android:name=".CarFormActivity">
+
             <!-- Optional: Thiết lập nhãn tiêu đề cho activity -->
             <!-- <android:label>@string/title_activity_car_form</android:label> -->
         </activity>
-
     </application>
 
 </manifest>
